# qr_clock

./: LICENSE  README.md  log.csv  qrclock.py
qrclock/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
qrclock/.github/: ISSUE_TEMPLATE.md
qrclock/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
qrclock/src/qrclock/: __init__.py  cli.py  qrclock.py
qrclock/tests/: __init__.py  test_qrclock.py
