[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qrclock"
version = "0.1.0"
description = "A superior clock"
readme = "README.rst"
authors = [
  {name = "Fraank", email = "fraank@live.de"}
]
maintainers = [
  {name = "Fraank", email = "fraank@live.de"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Fraank-dash/qrclock/issues"
changelog = "https://github.com/Fraank-dash/qrclock/blob/master/changelog.md"
homepage = "https://github.com/Fraank-dash/qrclock"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

